recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:4: error: value ==- is not a member of Int
	if (level==-1) {avance(length)}
                 ^